--- a/Ektron/GoodlyFere.Import.Ektron.nuspec
+++ b/Ektron/GoodlyFere.Import.Ektron.nuspec
@@ -1,20 +1,20 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>GoodlyFere.Import</id>
+    <id>GoodlyFere.Import.Ektron</id>
     <version>$version$</version>
-    <title>GoodlyFere Import Framework</title>
+    <title>GoodlyFere Import Ektron Plugin</title>
     <authors>Ben Ramey</authors>
     <owners>Ben Ramey</owners>
     <copyright>Copyright 2013 Ben Ramey</copyright>
-    <licenseUrl>https://github.com/benjaminramey/GoodlyFere.Import/blob/master/LICENSE.txt</licenseUrl>
-    <projectUrl>https://github.com/benjaminramey/GoodlyFere.Import</projectUrl>
+    <licenseUrl>https://github.com/benjaminramey/GoodlyFere.Import.Plugins/Ektron/blob/master/LICENSE.txt</licenseUrl>
+    <projectUrl>https://github.com/benjaminramey/GoodlyFere.Import.Plugins/Ektron</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>A simple framework to build data import projects upon.</description>
+    <description>And Ektron plugin for the GoodlyFere Import framework.</description>
     <releaseNotes>
-        Remove inclusion of tests dll in package.
+        Initial package.
     </releaseNotes>
-    <tags>data import framework</tags>
+    <tags>data import ektron plugin</tags>
     <dependencies>
       <dependency id="Common.Logging" version="[2.1.1, 3.0)" />
     </dependencies>
