Adds latest updates

--- a/Ektron/GoodlyFere.Import.Ektron.Tests/App.config
+++ b/Ektron/GoodlyFere.Import.Ektron.Tests/App.config
@@ -33,6 +33,8 @@
     </ektron.framework.services>
     <appSettings>
         <add key="ek_ServicesPath"
-             value="http://texaschildrenspediatrics.vmldev.com/workarea/services/" />
+             value="http://honeywellimport.vmldev.com/workarea/services/" />
+        <add key="EktronAdminUsername" value="admin"/>
+        <add key="EktronAdminPassword" value="Roth5yx!"/>
     </appSettings>
 </configuration>
