--- a/Ektron/GoodlyFere.Import.Ektron.Tests/GoodlyFere.Import.Ektron.Tests.csproj
+++ b/Ektron/GoodlyFere.Import.Ektron.Tests/GoodlyFere.Import.Ektron.Tests.csproj
@@ -38,17 +38,65 @@
     <Reference Include="CookieEncryption">
       <HintPath>..\lib\CookieEncryption.dll</HintPath>
     </Reference>
+    <Reference Include="Ektron.ASM.EkDavProtocol">
+      <HintPath>..\lib\Ektron.ASM.EkDavProtocol.dll</HintPath>
+    </Reference>
+    <Reference Include="Ektron.ASM.EkHttpDavHandler">
+      <HintPath>..\lib\Ektron.ASM.EkHttpDavHandler.dll</HintPath>
+    </Reference>
+    <Reference Include="Ektron.Cms.BusinessObjects">
+      <HintPath>..\lib\Ektron.Cms.BusinessObjects.dll</HintPath>
+    </Reference>
+    <Reference Include="Ektron.Cms.BusinessObjects.Caching">
+      <HintPath>..\lib\Ektron.Cms.BusinessObjects.Caching.dll</HintPath>
+    </Reference>
     <Reference Include="Ektron.Cms.Common">
       <HintPath>..\lib\Ektron.Cms.Common.dll</HintPath>
     </Reference>
     <Reference Include="Ektron.Cms.Framework">
       <HintPath>..\lib\Ektron.Cms.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="Ektron.Cms.Framework.UI">
+      <HintPath>..\lib\Ektron.Cms.Framework.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="Ektron.Cms.Framework.UI.Controls">
+      <HintPath>..\lib\Ektron.Cms.Framework.UI.Controls.dll</HintPath>
+    </Reference>
+    <Reference Include="Ektron.Cms.Framework.UI.Controls.EktronUI">
+      <HintPath>..\lib\Ektron.Cms.Framework.UI.Controls.EktronUI.dll</HintPath>
+    </Reference>
+    <Reference Include="Ektron.Cms.Framework.UI.Registration">
+      <HintPath>..\lib\Ektron.Cms.Framework.UI.Registration.dll</HintPath>
+    </Reference>
+    <Reference Include="Ektron.Cms.Framework.UI.Services">
+      <HintPath>..\lib\Ektron.Cms.Framework.UI.Services.dll</HintPath>
+    </Reference>
     <Reference Include="Ektron.Cms.Instrumentation">
       <HintPath>..\lib\Ektron.Cms.Instrumentation.dll</HintPath>
     </Reference>
     <Reference Include="Ektron.Cms.ObjectFactory">
       <HintPath>..\lib\Ektron.Cms.ObjectFactory.dll</HintPath>
+    </Reference>
+    <Reference Include="Ektron.Cms.Personalization">
+      <HintPath>..\lib\Ektron.Cms.Personalization.dll</HintPath>
+    </Reference>
+    <Reference Include="Ektron.Cms.Providers">
+      <HintPath>..\lib\Ektron.Cms.Providers.dll</HintPath>
+    </Reference>
+    <Reference Include="Ektron.Cms.Search">
+      <HintPath>..\lib\Ektron.Cms.Search.dll</HintPath>
+    </Reference>
+    <Reference Include="Ektron.Cms.Widget">
+      <HintPath>..\lib\Ektron.Cms.Widget.dll</HintPath>
+    </Reference>
+    <Reference Include="Ektron.EnterpriseLibrary.Caching">
+      <HintPath>..\lib\Ektron.EnterpriseLibrary.Caching.dll</HintPath>
+    </Reference>
+    <Reference Include="Ektron.EnterpriseLibrary.Common">
+      <HintPath>..\lib\Ektron.EnterpriseLibrary.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Ektron.EnterpriseLibrary.Data">
+      <HintPath>..\lib\Ektron.EnterpriseLibrary.Data.dll</HintPath>
     </Reference>
     <Reference Include="Ektron.Newtonsoft.Json">
       <HintPath>..\lib\Ektron.Newtonsoft.Json.dll</HintPath>
@@ -59,11 +107,20 @@
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common">
       <HintPath>..\lib\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Data">
+      <HintPath>..\lib\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Logging">
       <HintPath>..\lib\Microsoft.Practices.EnterpriseLibrary.Logging.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Logging.Database">
+      <HintPath>..\lib\Microsoft.Practices.EnterpriseLibrary.Logging.Database.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Validation">
       <HintPath>..\lib\Microsoft.Practices.EnterpriseLibrary.Validation.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.ObjectBuilder">
+      <HintPath>..\lib\Microsoft.Practices.ObjectBuilder.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation">
       <HintPath>..\lib\Microsoft.Practices.ServiceLocation.dll</HintPath>
@@ -81,20 +138,46 @@
       <HintPath>..\packages\NSubstitute.1.5.0.0\lib\NET40\NSubstitute.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="xunit">
+      <HintPath>..\packages\xunit.1.9.1\lib\net20\xunit.dll</HintPath>
+    </Reference>
+    <Reference Include="Yahoo.Yui.Compressor">
+      <HintPath>..\lib\Yahoo.Yui.Compressor.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="ContentDestinationTests.cs" />
+    <Compile Include="EktronTestHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmartFormDestinationTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="EktronConfig\ektron.cms.framework.ui.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="EktronConfig\ektron.cms.framework.ui.unity.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="EktronConfig\ektron.cms.framework.unity.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GoodlyFere.Import.Ektron\GoodlyFere.Import.Ektron.csproj">
+      <Project>{d643e59e-6bf1-4708-ac59-98651a7bce33}</Project>
+      <Name>GoodlyFere.Import.Ektron</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
