--- a/Ektron/GoodlyFere.Import.Ektron/GoodlyFere.Import.Ektron.csproj
+++ b/Ektron/GoodlyFere.Import.Ektron/GoodlyFere.Import.Ektron.csproj
@@ -87,11 +87,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ContentRowComparer.cs" />
+    <Compile Include="Destination\DestinationBase.cs" />
+    <Compile Include="Destination\MetadataDestination.cs" />
+    <Compile Include="Tools\ContentRowComparer.cs" />
     <Compile Include="Destination\ContentDestination.cs" />
     <Compile Include="Destination\SmartFormDestination.cs" />
     <Compile Include="Extensions\ContentDataRowExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\DestinationHelper.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
