--- a/Ektron/GoodlyFere.Import.Ektron.Tests/GoodlyFere.Import.Ektron.Tests.csproj
+++ b/Ektron/GoodlyFere.Import.Ektron.Tests/GoodlyFere.Import.Ektron.Tests.csproj
@@ -23,13 +23,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Common.Logging">
@@ -101,8 +96,8 @@
     <Reference Include="Ektron.Newtonsoft.Json">
       <HintPath>..\lib\Ektron.Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="GoodlyFere.Import">
-      <HintPath>..\packages\GoodlyFere.Import.1.0.0.7\lib\net45\GoodlyFere.Import.dll</HintPath>
+    <Reference Include="GoodlyFere.Import, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\GoodlyFere.Import.1.0.0.8\lib\net40\GoodlyFere.Import.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common">
       <HintPath>..\lib\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
