Adds log4net logging to test project, updates destination base and tests with bug fix for setting ek_ServicesPath appSetting

--- a/Ektron/GoodlyFere.Import.Ektron.Tests/App.config
+++ b/Ektron/GoodlyFere.Import.Ektron.Tests/App.config
@@ -16,7 +16,24 @@
             <section name="framework"
                      type="Ektron.Cms.FrameworkConfigurationSection, Ektron.Cms.ObjectFactory" />
         </sectionGroup>
+        <sectionGroup name="common">
+            <section name="logging"
+                     type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
+        </sectionGroup>
+
+        <section name="log4net"
+                 type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
     </configSections>
+    <common>
+        <logging>
+            <factoryAdapter type="Common.Logging.Log4Net.Log4NetLoggerFactoryAdapter, Common.Logging.Log4net1211">
+                <arg key="configType"
+                     value="FILE-WATCH" />
+                <arg key="configFile"
+                     value="~/log4net.config" />
+            </factoryAdapter>
+        </logging>
+    </common>
     <ektron.cacheProvider defaultProvider="webCache">
         <providers>
             <add name="webCache"
@@ -32,9 +49,11 @@
                    childContainer="WCF" />
     </ektron.framework.services>
     <appSettings>
-        <add key="ek_ServicesPath"
+        <add key="EktronServicesPath"
              value="http://honeywellimport.vmldev.com/workarea/services/" />
-        <add key="EktronAdminUsername" value="admin"/>
-        <add key="EktronAdminPassword" value="Roth5yx!"/>
+        <add key="EktronAdminUsername"
+             value="admin"/>
+        <add key="EktronAdminPassword"
+             value="Roth5yx!"/>
     </appSettings>
 </configuration>
