--- a/Ektron/GoodlyFere.Import.Ektron.Tests/packages.config
+++ b/Ektron/GoodlyFere.Import.Ektron.Tests/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Common.Logging" version="2.1.2" targetFramework="net45" />
+  <package id="Common.Logging.Log4Net1211" version="2.1.2" targetFramework="net40" />
   <package id="GoodlyFere.Import" version="1.0.0.8" targetFramework="net40" />
+  <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="NSubstitute" version="1.5.0.0" targetFramework="net45" />
   <package id="xunit" version="1.9.1" targetFramework="net45" />
 </packages>
