--- a/Ektron/GoodlyFere.Import.Ektron/GoodlyFere.Import.Ektron.nuspec
+++ b/Ektron/GoodlyFere.Import.Ektron/GoodlyFere.Import.Ektron.nuspec
@@ -12,7 +12,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>An Ektron plugin for the GoodlyFere Import framework.</description>
     <releaseNotes>
-        Initial package upload.  This version provides basic support for SmartFormDestination, MetadataDestination and ContentDestination.
+        Fixed bug with setting the ek_ServicesPath appSetting in code.
     </releaseNotes>
     <tags>data import ektron plugin goodlyfere</tags>
   </metadata>
