--- a/Ektron/GoodlyFere.Import.Ektron.Tests/GoodlyFere.Import.Ektron.Tests.csproj
+++ b/Ektron/GoodlyFere.Import.Ektron.Tests/GoodlyFere.Import.Ektron.Tests.csproj
@@ -100,7 +100,8 @@
       <HintPath>..\lib\Ektron.Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="GoodlyFere.Import, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\GoodlyFere.Import.1.0.0.8\lib\net40\GoodlyFere.Import.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\GoodlyFere.Import.1.0.0.9\lib\net40\GoodlyFere.Import.dll</HintPath>
     </Reference>
     <Reference Include="log4net, Version=1.2.11.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
