--- a/Ektron/GoodlyFere.Import.Ektron/GoodlyFere.Import.Ektron.csproj
+++ b/Ektron/GoodlyFere.Import.Ektron/GoodlyFere.Import.Ektron.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -93,6 +94,7 @@
     <Compile Include="Extensions\ContentDataRowExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\DestinationHelper.cs" />
+    <Compile Include="Tools\ThreadManager.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
