--- a/CSV/GoodlyFere.Import.CSV.Tests/GoodlyFere.Import.CSV.Tests.csproj
+++ b/CSV/GoodlyFere.Import.CSV.Tests/GoodlyFere.Import.CSV.Tests.csproj
@@ -32,6 +32,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Common.Logging">
+      <HintPath>..\packages\Common.Logging.2.1.2\lib\net40\Common.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="CsvHelper, Version=1.17.0.14431, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\CsvHelper.1.17.0\lib\net40-client\CsvHelper.dll</HintPath>
+    </Reference>
+    <Reference Include="GoodlyFere.Import">
+      <HintPath>..\packages\GoodlyFere.Import.1.0.3.0\lib\net40\GoodlyFere.Import.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,11 +54,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SourceTests\CsvSourceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GoodlyFere.Import.CSV\GoodlyFere.Import.CSV.csproj">
+      <Project>{ce889ca7-a9e6-450c-9b9e-1803ffcdeb65}</Project>
+      <Name>GoodlyFere.Import.CSV</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
