--- a/CSV/GoodlyFere.Import.CSV.Tests/packages.config
+++ b/CSV/GoodlyFere.Import.CSV.Tests/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="2.1.2" targetFramework="net40" />
+  <package id="CsvHelper" version="1.17.0" targetFramework="net40" />
+  <package id="GoodlyFere.Import" version="1.0.3.0" targetFramework="net40" />
   <package id="xunit" version="1.9.1" targetFramework="net40" />
 </packages>
