--- a/CSV/GoodlyFere.Import.CSV/GoodlyFere.Import.CSV.csproj
+++ b/CSV/GoodlyFere.Import.CSV/GoodlyFere.Import.CSV.csproj
@@ -35,11 +35,13 @@
     <Reference Include="Common.Logging">
       <HintPath>..\packages\Common.Logging.2.1.2\lib\net40\Common.Logging.dll</HintPath>
     </Reference>
-    <Reference Include="CsvHelper">
+    <Reference Include="CsvHelper, Version=1.17.0.14431, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\CsvHelper.1.17.0\lib\net40-client\CsvHelper.dll</HintPath>
     </Reference>
-    <Reference Include="GoodlyFere.Import">
-      <HintPath>..\packages\GoodlyFere.Import.1.0.2.0\lib\net40\GoodlyFere.Import.dll</HintPath>
+    <Reference Include="GoodlyFere.Import, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\GoodlyFere.Import.1.0.3.0\lib\net40\GoodlyFere.Import.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -50,7 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="CsvSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
