--- a/Ektron/GoodlyFere.Import.Ektron/GoodlyFere.Import.Ektron.csproj
+++ b/Ektron/GoodlyFere.Import.Ektron/GoodlyFere.Import.Ektron.csproj
@@ -85,6 +85,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tools\Authenticator.cs" />
     <Compile Include="Destination\DestinationBase.cs" />
     <Compile Include="Destination\MetadataDestination.cs" />
     <Compile Include="Destination\TaxonomyDestination.cs" />
